adding styling for html

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-  <h1>Request a JSON Web Token</h1>
-  <section id="from">
+  <header>
+    <h1>Request a JSON Web Token</h1>
+  </header>
+  <section id="form">
     <form>
       <label for="app">App Name</label>
       <input id="app" type="text" name="app_name" placeholder="app_name" />
